# Nordic-Corporate-Factor-Strategy

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 00_pipeline.ipynb
src/ncfs/: __init__.py  backtest.py  cleaning.py  config.py  covariance.py  data_loader.py  desmoothing.py  evaluation.py  factors.py  optimizer.py  returns.py  shadow_rating.py  universe.py
