[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncfs"
version = "0.1.0"
description = "Systematic factor strategy for Nordic corporate bonds"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "cvxpy",
    "osqp",
    "matplotlib",
    "seaborn",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]
